// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessCard Structure - Snapshots renders chat menu options when contact is online 1`] = `
<div>
  <div
    class="sc-EHOje jdCcvM"
  >
    <div
      class="sc-bZQynM hzprsO"
    >
      <div>
        <h1
          class="sc-htoDjs iZtlym"
        >
          SpongeBob SquarePants
        </h1>
        <h2
          class="sc-dnqmqq kGYEvA"
        >
          Fry cook — Krusty Krab
        </h2>
      </div>
    </div>
    <footer
      class="sc-iwsKbI krTmKM"
    >
      <span
        class="sc-gZMcBi hQsnUx"
        data-testid="business-card-online-indicator"
      >
        Online
      </span>
      <div
        class="sc-bdVaJa huqire"
        data-testid="overflow-menu"
      >
        <button
          class="sc-bwzfXH sc-htpNat tfKyv"
          data-testid="overflow-menu-toggle"
          open=""
        >
          Contact SpongeBob
        </button>
        <div
          class="sc-ifAKCX gwmupT"
        >
          <button
            class="sc-bwzfXH sc-bxivhb cCHJQU"
          >
            Start chat
          </button>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`BusinessCard Structure - Snapshots renders contact menu when email is provided 1`] = `
<div>
  <div
    class="sc-EHOje jdCcvM"
  >
    <div
      class="sc-bZQynM hzprsO"
    >
      <div>
        <h1
          class="sc-htoDjs iZtlym"
        >
          SpongeBob SquarePants
        </h1>
        <h2
          class="sc-dnqmqq kGYEvA"
        >
          Fry cook — Krusty Krab
        </h2>
      </div>
    </div>
    <footer
      class="sc-iwsKbI krTmKM"
    >
      <span
        class="sc-gZMcBi kIVahm"
        data-testid="business-card-online-indicator"
      >
        Offline
      </span>
      <div
        class="sc-bdVaJa huqire"
        data-testid="overflow-menu"
      >
        <button
          class="sc-bwzfXH sc-htpNat gTrUOb"
          data-testid="overflow-menu-toggle"
        >
          Contact SpongeBob
        </button>
      </div>
    </footer>
  </div>
</div>
`;

exports[`BusinessCard Structure - Snapshots renders contact menu when phone number is provided 1`] = `
<div>
  <div
    class="sc-EHOje jdCcvM"
  >
    <div
      class="sc-bZQynM hzprsO"
    >
      <div>
        <h1
          class="sc-htoDjs iZtlym"
        >
          SpongeBob SquarePants
        </h1>
        <h2
          class="sc-dnqmqq kGYEvA"
        >
          Fry cook — Krusty Krab
        </h2>
      </div>
    </div>
    <footer
      class="sc-iwsKbI krTmKM"
    >
      <span
        class="sc-gZMcBi kIVahm"
        data-testid="business-card-online-indicator"
      >
        Offline
      </span>
      <div
        class="sc-bdVaJa huqire"
        data-testid="overflow-menu"
      >
        <button
          class="sc-bwzfXH sc-htpNat gTrUOb"
          data-testid="overflow-menu-toggle"
        >
          Contact SpongeBob
        </button>
      </div>
    </footer>
  </div>
</div>
`;

exports[`BusinessCard Structure - Snapshots renders default structure 1`] = `
<div>
  <div
    class="sc-EHOje jdCcvM"
  >
    <div
      class="sc-bZQynM hzprsO"
    >
      <div>
        <h1
          class="sc-htoDjs iZtlym"
        >
          SpongeBob SquarePants
        </h1>
        <h2
          class="sc-dnqmqq kGYEvA"
        >
          Fry cook — Krusty Krab
        </h2>
      </div>
    </div>
    <footer
      class="sc-iwsKbI krTmKM"
    >
      <span
        class="sc-gZMcBi kIVahm"
        data-testid="business-card-online-indicator"
      >
        Offline
      </span>
    </footer>
  </div>
</div>
`;

exports[`BusinessCard Structure - Snapshots renders email menu options when email is provided 1`] = `
<div>
  <div
    class="sc-EHOje jdCcvM"
  >
    <div
      class="sc-bZQynM hzprsO"
    >
      <div>
        <h1
          class="sc-htoDjs iZtlym"
        >
          SpongeBob SquarePants
        </h1>
        <h2
          class="sc-dnqmqq kGYEvA"
        >
          Fry cook — Krusty Krab
        </h2>
      </div>
    </div>
    <footer
      class="sc-iwsKbI krTmKM"
    >
      <span
        class="sc-gZMcBi kIVahm"
        data-testid="business-card-online-indicator"
      >
        Offline
      </span>
      <div
        class="sc-bdVaJa huqire"
        data-testid="overflow-menu"
      >
        <button
          class="sc-bwzfXH sc-htpNat tfKyv"
          data-testid="overflow-menu-toggle"
          open=""
        >
          Contact SpongeBob
        </button>
        <div
          class="sc-ifAKCX gwmupT"
        >
          <button
            class="sc-bwzfXH sc-bxivhb cCHJQU"
          >
            Send email
          </button>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`BusinessCard Structure - Snapshots renders head shot 1`] = `
<div>
  <div
    class="sc-EHOje jdCcvM"
  >
    <div
      class="sc-bZQynM hzprsO"
    >
      <div
        class="sc-gzVnrw kguMlY"
        data-testid="business-card-image"
        style="background-image: url(spongebob.jpg);"
      />
      <div>
        <h1
          class="sc-htoDjs iZtlym"
        >
          SpongeBob SquarePants
        </h1>
        <h2
          class="sc-dnqmqq kGYEvA"
        >
          Fry cook — Krusty Krab
        </h2>
      </div>
    </div>
    <footer
      class="sc-iwsKbI krTmKM"
    >
      <span
        class="sc-gZMcBi kIVahm"
        data-testid="business-card-online-indicator"
      >
        Offline
      </span>
    </footer>
  </div>
</div>
`;

exports[`BusinessCard Structure - Snapshots renders online indicator and contact menu 1`] = `
<div>
  <div
    class="sc-EHOje jdCcvM"
  >
    <div
      class="sc-bZQynM hzprsO"
    >
      <div>
        <h1
          class="sc-htoDjs iZtlym"
        >
          SpongeBob SquarePants
        </h1>
        <h2
          class="sc-dnqmqq kGYEvA"
        >
          Fry cook — Krusty Krab
        </h2>
      </div>
    </div>
    <footer
      class="sc-iwsKbI krTmKM"
    >
      <span
        class="sc-gZMcBi hQsnUx"
        data-testid="business-card-online-indicator"
      >
        Online
      </span>
      <div
        class="sc-bdVaJa huqire"
        data-testid="overflow-menu"
      >
        <button
          class="sc-bwzfXH sc-htpNat gTrUOb"
          data-testid="overflow-menu-toggle"
        >
          Contact SpongeBob
        </button>
      </div>
    </footer>
  </div>
</div>
`;

exports[`BusinessCard Structure - Snapshots renders phone number menu options when phone number is provided 1`] = `
<div>
  <div
    class="sc-EHOje jdCcvM"
  >
    <div
      class="sc-bZQynM hzprsO"
    >
      <div>
        <h1
          class="sc-htoDjs iZtlym"
        >
          SpongeBob SquarePants
        </h1>
        <h2
          class="sc-dnqmqq kGYEvA"
        >
          Fry cook — Krusty Krab
        </h2>
      </div>
    </div>
    <footer
      class="sc-iwsKbI krTmKM"
    >
      <span
        class="sc-gZMcBi kIVahm"
        data-testid="business-card-online-indicator"
      >
        Offline
      </span>
      <div
        class="sc-bdVaJa huqire"
        data-testid="overflow-menu"
      >
        <button
          class="sc-bwzfXH sc-htpNat tfKyv"
          data-testid="overflow-menu-toggle"
          open=""
        >
          Contact SpongeBob
        </button>
        <div
          class="sc-ifAKCX gwmupT"
        >
          <button
            class="sc-bwzfXH sc-bxivhb cCHJQU"
          >
            Start voice call
          </button>
          <button
            class="sc-bwzfXH sc-bxivhb cCHJQU"
          >
            Start video call
          </button>
          <button
            class="sc-bwzfXH sc-bxivhb cCHJQU"
          >
            Send SMS
          </button>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
